fixed sidebar z-index

--- a/client/src/styles/SideBar.css
+++ b/client/src/styles/SideBar.css
@@ -9,7 +9,7 @@
   overflow-x: hidden;
   transition: all 0.3s ease;
   padding-top: 0px;
-  z-index: 1000;
+  z-index: 100000;
   border-top-right-radius: 15px;
 }
 
